// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform basic 1`] = `
"<template><div class=\\"markdown-body\\"><h1>Hello</h1>
<ul>
<li>A</li>
<li>B</li>
<li>C</li>
</ul>
</div></template>
<script setup>
const frontmatter = {\\"title\\":\\"Hey\\"}
defineExpose({ frontmatter })
</script>

"
`;

exports[`transform couldn't expose frontmatter 1`] = `
"<template><div class=\\"markdown-body\\">
</div></template>
<script setup>
const frontmatter = {\\"title\\":\\"Hey\\"}

defineExpose({ test: 'test'})

</script>

"
`;

exports[`transform escapeCodeTagInterpolation 1`] = `
"<template><div class=\\"markdown-body\\"><div>{{hello}}</div>
<pre><code class=\\"language-ts\\" v-pre>&lt;div&gt;{{hello}}&lt;/div&gt;
</code></pre>
</div></template>
<script setup>
const frontmatter = {}
defineExpose({ frontmatter })
</script>

"
`;

exports[`transform exposes frontmatter 1`] = `
"<template><div class=\\"markdown-body\\"><h1>Hello</h1>
</div></template>
<script setup>
const frontmatter = {\\"title\\":\\"Hey\\"}
defineExpose({ frontmatter })
</script>

"
`;

exports[`transform frontmatter interpolation 1`] = `
"<template><div class=\\"markdown-body\\"><h1>Hello World</h1>
<p>This is {{frontmatter.name}}</p>
</div></template>
<script setup>
const frontmatter = {\\"name\\":\\"My Cool App\\"}
defineExpose({ frontmatter })
</script>

"
`;

exports[`transform script setup 1`] = `
"<template><div class=\\"markdown-body\\"><h1>Hello</h1>

</div></template>
<script setup>
const frontmatter = {}
defineExpose({ frontmatter })

import Foo from './Foo.vue'

</script>

"
`;

exports[`transform style 1`] = `
"<template><div class=\\"markdown-body\\"><h1>Hello</h1>

</div></template>
<script setup>
const frontmatter = {}
defineExpose({ frontmatter })
</script>
<style>h1 { color: red }</style>
"
`;
